welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:31: error: ':' expected but '.' found.
def fleur(a:Color,b.Color) {
                   ^FlowerPot:51: error: identifier expected but '}' found.
}
^